# Mercado-Moderno

./: .gitignore  LICENSE.txt  README.md
.github/workflows/: run_tests.yml
backend/: db.sqlite3  pyproject.toml  requirements.txt
backend/mercado_moderno/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/mercado_moderno/migrations/: 0001_initial.py  0002_alter_itemcompra_produto.py  0002_alter_produto_descricao.py  0002_rename_cliente_carrinho_usuario_and_more.py  0003_produto_imagem.py  0003_remove_produto_desconto.py
backend/mercado_moderno/static/mercado_moderno/: index.css
backend/mercado_moderno/templates/mercado_moderno/: alterar_senha.html  home.html  produtos.html
backend/mysite/: settings.py  urls.py
backend/templates/admin/: base_site.html
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  products.js
frontend/src/components/: navbar.jsx
frontend/src/context/: shop-context.jsx
frontend/src/pages/cart/: cart-items.jsx  cart.css  cart.jsx
frontend/src/pages/login/: Login.css  Login.jsx
frontend/src/pages/register/: Register.jsx
frontend/src/pages/shop/: product.jsx  shop.css  shop.jsx
mercado/: package-lock.json  package.json
mercado/src/: App.js  Form.js  products.js
mercado/src/components/: navbar.jsx
mercado/src/context/: shop-context.jsx
mercado/src/pages/cart/: cart.jsx
mysite/: db.sqlite3
mysite/mercado_moderno/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
mysite/mysite/: settings.py  urls.py
(+7 files in other folders)
